# LRG-Hackathon

./: .gitignore  README.md
Lewisham/: AOAI_PBI_Script.txt  AnonymiseData.cs  CategoriseData.ipynb  ExtractWeatherData.cs  Hackathon Instructions.docx  OpenAI and Power BI set up.docx  Script-for-Date-Dimension.txt  SplitDataForTraining.ipynb  ValidatePostCode.cs  Weather_API_Script.txt
api/: pyproject.toml
api/api/: main.py
api/api/chat/: chat_handler.py
api/api/enrich/: audio_converter.py  audio_transcriber.py
api/api/search/: search_handler.py
api/docs/: Complaint Procedure (1).docx
docs/: Adatis Screening Policy V4.txt  Complaint Procedure.docx
docs/architecture/: LRG AI Hackathon - Reference Architecture.drawio
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.tsx  global.css
frontend/src/components/AppLayout/: AppLayout.tsx
frontend/src/components/ChatBox/: ChatBox.tsx
frontend/src/components/ChatMessageDisplay/: ChatMessageDisplay.tsx
frontend/src/components/ChatMessageLoading/: ChatMessageLoading.tsx
frontend/src/components/ChatWindow/: ChatWindow.tsx
frontend/src/components/Logo/: Logo.tsx
frontend/src/domain/: ChatMessage.ts
frontend/src/pages/: Home.page.tsx
infrastructure/: main.bicep
knowledge-creator/: README.md  pyproject.toml
